--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -3,7 +3,7 @@
   margin: auto;
   height: 250px;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
