--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -10,7 +10,11 @@
   top: 20%;
   box-sizing: border-box;
   transition: all 0.3s ease-out;
-  overflow-y: auto;
+  /* overflow-y: auto; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* height: fit-content; */
 }
 
 @media (min-width: 600px) {
